styles.css
/* CSS Here pls */
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&display=swap');

/*Contact Page CSS*/
html {
  /* If Want a image change here */
  /* background: url(/4138964.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; */
  background: orange;
  font-family: 'Creepster', cursive;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html,
body {
  height: 100%;
  overflow-x: hidden !important;
  background-color: #000000;
}

.card {
  /* Add shadows to create the "card" effect */
  margin: 20px;
  box-shadow: 0 4px 8px 0 rgb(5, 5, 5);
  transition: 0.3s;
  width: 300px;
  border: black 2px solid;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  color: black;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  transform: scale(1.05);
}

.card img {
  width: 200px;
  height: 200px;
  margin: 20px auto 10px auto;
  border-radius: 100%;
  border: 1px solid #000;
}

.container a {
  text-decoration: none;
  color: white;
  display: block;
  margin-bottom: 10px;
  padding: 10px 20px;
  border: 1px solid #000;
  border-radius: 5px;
  transition: all 0.2s ease-in-out;
}
.container h2{
  color: orange;
}
.first-section{
  background-image: url("./Scarecrow.jpeg");
}

.container a:hover {
  background-color: #000;
  color: orange;
}

/* Add some padding inside the card container */
.container {
  padding: 2px 16px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.contacts {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  flex-wrap: wrap;
}
.intro {
  margin-top: 100px;
  color: white;
  display: flex;
  justify-content: center;
}
.soc {
  /* background-color: #cbcccb; */
  display: flex;
  justify-content: center;
  margin-top: 30px;
  flex-direction: row;
}
.soc li {
  list-style: none;
  margin: 10px 10px;
  transition: all 0.2s ease-in-out;
}
.soc li:hover {
  transform: scale(1.3);
}
.soc li a {
  padding-bottom: 2px;
}

.container {
  max-width: 100% !important;
  overflow-x: hidden !important;
}

.imptext h2 {
  font-family: 'Space Mono', monospace;
  font-style: normal;
  font-weight: bold;
  letter-spacing: -0.035em;
  /* Gray 1 */
  color: #ffffff;
}

.imptext p {
  font-family: 'Space Mono', monospace;
  font-style: normal;
  font-weight: normal;
  letter-spacing: -0.035em;
  /* Gray 1 */
  color: #ffffff;
}

.imptext a {
  font-family: 'Space Mono', monospace;
  font-style: normal;
  font-weight: normal;
  letter-spacing: -0.035em;
  text-transform: uppercase;
  /* Gray 1 */
  color: #333333;
}
.imptext2 h2 {
  font-family: 'Space Mono', monospace;
  font-style: normal;
  font-weight: bold;
  letter-spacing: -0.035em;
  /* Gray 1 */
  color: #ffffff;
}

.imptext2 p {
  font-family: 'Space Mono', monospace;
  font-style: normal;
  font-weight: normal;
  letter-spacing: -0.035em;
  /* Gray 1 */
  color: #ffffff;
}

.imptext2 a {
  font-family: 'Space Mono', monospace;
  font-style: normal;
  font-weight: normal;
  letter-spacing: -0.035em;
  text-transform: uppercase;
  /* Gray 1 */
  color: #333333;
}
nav {
  width: auto;
  height: 1.5rem;
  left: 1rem;
  top: 1.25rem;

  font-family: 'Inconsolata', monospace;
  font-style: normal;
  font-weight: bold;
  font-size: 1.5rem;
  line-height: 1.5rem;
  letter-spacing: -0.08em;
  text-transform: uppercase;
  color: #ffffff;
}

@media only screen and (min-width: 1080px) {
  .imptext h2 {
    font-size: 4rem;
    max-width: 30rem;
    line-height: 6rem;
  }
  .imptext p {
    font-size: 1.5rem;
    max-width: 30rem;
    line-height: 2.5rem;
  }
  .imptext2 h2 {
    font-size: 4rem;
    line-height: 6rem;
  }
  .imptext2 p {
    font-size: 1.5rem;
    line-height: 2.5rem;
  }
}

/* Navbar */
html {
  scroll-behavior: smooth;
}

/* Navbar */
body {
  margin: 0;
  font-family: 'Space Mono', monospace;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: 0.6s;
  transition: 0.6s;
  background: rgba(22,22,22,0.85);
  z-index: 100000;
}
.header__logo {
  position: relative;
  -webkit-transition: 0.6s;
  transition: 0.6s;
}
.header__logo a {
  font-weight: 700;
  color: #fff;
  font-size: 17px;
  padding: 14px 16px;
  text-transform: uppercase;
  letter-spacing: 2px;
}
#button-hamburger {
  display: none;
  z-index: 999;
}
.topnav {
  display: grid;
  z-index: 99;
  width: auto;
  position: relative;
  transform: translate(0, 0);
  grid-auto-flow: column;
  top: 0;
  text-align: center;
}
@media screen and (max-width: 670px) {
  .topnav {
    grid-auto-flow: row;
    background-color: #222;
    position: absolute;
    transform: translate(-300px, 0);
    transition: transform 0.3s ease-in-out;
    margin: 0 auto;
    top: 75px;
    text-align: left;
  }
  .topnav a{
    text-decoration: none;
    display: inline-block;
  }
  .topnav.open {
    transform: translate(0,0);
    width: 100%;
  }
  #button-hamburger {
    display: block;
    background-color: #000;
    padding: 19px 17px;
    border: none;
    border-radius: 3px;
    font-size: 23px;
    color: #fff;
    cursor: pointer;
  }
  #button-hamburger:hover {
    background-color: #333;
  }
}
/* ... */

